<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_tv_name"
        android:layout_width="match_parent"
        android:layout_height="20sp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:indeterminateDuration="700"
        app:layout_constraintTop_toTopOf="@id/tv_name"
        app:layout_constraintLeft_toLeftOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextView.Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/name_example" />

    <ProgressBar
        android:id="@+id/progress_tv_street"
        android:layout_width="150dp"
        android:layout_height="20sp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:indeterminateDuration="700"
        app:layout_constraintTop_toTopOf="@id/tv_street"
        app:layout_constraintLeft_toLeftOf="@id/tv_street" />

    <TextView
        android:id="@+id/tv_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextView.Sub"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/example_street" />

    <TextView
        android:id="@+id/tv_sub_title"
        style="@style/TextView.Sub.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/parking_spot_available" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_available"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:backgroundTint="#fafafa"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_local_parking_24"
                    app:tint="@color/orange_primary" />

                <TextView
                    android:id="@+id/tv_availablility"
                    style="@style/TextView.Parking"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/example_parking_availability" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_tv_availability"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="90dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cv_available"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.Sub.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/description"
            app:drawableLeftCompat="@drawable/ic_baseline_bookmark_24" />

        <ProgressBar
            android:id="@+id/progress_tv_description"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle"
            android:indeterminateDuration="700" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TextView.Sub.Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            tools:text="@string/description_example" />

        <TextView
            style="@style/TextView.Sub.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/address"
            app:drawableLeftCompat="@drawable/ic_baseline_location_on_24" />

        <ProgressBar
            android:id="@+id/progress_tv_address"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle"
            android:indeterminateDuration="700" />

        <TextView
            android:id="@+id/tv_address"
            style="@style/TextView.Sub.Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            tools:text="@string/example_address" />

        <TextView
            style="@style/TextView.Sub.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/click_to_refresh_image"
            app:drawableLeftCompat="@drawable/ic_baseline_flip_camera_ios_24" />

        <ProgressBar
            android:id="@+id/progress_iv_cctv"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <ImageView
            android:id="@+id/iv_cctv"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/cctv_image"
            android:contentDescription="@string/cctv_feed" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>